leptos_macro/tests/view/03_concrete_prop_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/view/03_concrete_prop_wrong_type.rs:11:34
   |
11 |             <Inner concrete_bool=42/>
   |                                  ^^ expected `bool`, found integer
